--- a/digitkart/dkart-docker-compose.yml
+++ b/digitkart/dkart-docker-compose.yml
@@ -6,19 +6,25 @@ services:
         volumes:
             - "/var/run/docker.sock:/var/run/docker.sock"
             - "/home/orin1/.registry_cred/config.json:/config.json"
-        command: "--interval 60"
+        command: "--interval 60"   
         restart: on-failure
     frictionless_scanner:
-        image: index.docker.io/meontechno/frictionless-scanner:latest
+        image: index.docker.io/meontechno/frictionless-scanner:qrcv
         command: "python3 qr_scanner/app.py"
         environment:
-            TOPIC: "frictionless/customer-id-scan"
-            WS_URL: "ws://ec2-3-218-19-179.compute-1.amazonaws.com/lab-live-cart"
+            BROKER: "broker.hivemq.com"
+            ASSOCIATE_CUS_TOPIC: "frictionless/customer-id-scan"
+            TRANSACTION_TOPIC: "frictionless/ivlab/terminal/start-transaction"
+            CART_TOPIC: "frictionless/edge-cart"
+            WS_URL: "ws://ec2-3-218-19-179.compute-1.amazonaws.com/live-cart"
+            TENANT_ID: "3d74191d-fe60-475d-8dcc-6ad6277dacf6"
+            EDGE_ID: "KCED90009"
+            ADD_ITEMS_LOCAL_CART: "https://dev.digitkart.ai/api/frictionless/api/kc/updateTransaction"
         devices:
             - "/dev/hidraw0:/dev/hidraw1"
         restart: on-failure
     frictionless_edge:
-        image : index.docker.io/meontechno/frictionless:kc-terminal-test2
+        image : index.docker.io/meontechno/frictionless:kc-terminal-qrcv
         command: bash -c "export LD_PRELOAD=/usr/lib/aarch64-linux-gnu/tegra/libnvbuf_utils.so && python3 image_recognition/app.py"
         network_mode: "host"
         environment:
@@ -33,8 +39,11 @@ services:
             TOPIC3: "frictionless/ivlab/start-transaction"
             TOPIC4: "frictionless/ivlab/close-transaction"
             TOPIC5: "frictionless/ivlab/terminal/start-transaction"
+            CART_TOPIC: "frictionless/edge-cart"
             IMG_CAP_TOPIC: "frictionless/ivlab/capture-image"
             IMG_WS_URL: "ws://ec2-3-218-19-179.compute-1.amazonaws.com/lab/image-ws"
+            CART_API: "https://dev.digitkart.ai/api/frictionless/api/kc/updateTransaction"
+            ASSOCIATE_CUST_API: "https://dev.digitkart.ai/api/frictionless/api/kc/associateCustomerId"
             TENANT_ID: "3d74191d-fe60-475d-8dcc-6ad6277dacf6"
             EDGE_ID: "KCED90009"
         devices:
