--- a/digitkart/dkart-docker-compose.yml
+++ b/digitkart/dkart-docker-compose.yml
@@ -15,6 +15,7 @@ services:
             BROKER: "broker.hivemq.com"
             ASSOCIATE_CUS_TOPIC: "frictionless/customer-id-scan"
             #TRANSACTION_TOPIC: "frictionless/ivlab/terminal/start-transaction"
+            #CLOSE_TRANSACTION_TOPIC: "3d74191d-fe60-475d-8dcc-6ad6277dacf6/KCED90044/stop-transaction"
             CART_TOPIC: "frictionless/edge-cart"
             WS_URL: "ws://ec2-3-218-19-179.compute-1.amazonaws.com/live-cart"
             ADD_ITEMS_LOCAL_CART: "https://dev.digitkart.ai/api/frictionless/api/kc/updateTransaction"
@@ -24,7 +25,7 @@ services:
             - "/dev/hidraw0:/dev/hidraw1"
         restart: on-failure
     frictionless_edge:
-        image : index.docker.io/meontechno/frictionless:kc-terminal-qrcv
+        image : index.docker.io/meontechno/frictionless:kc-terminal-qrcv2
         command: bash -c "export LD_PRELOAD=/usr/lib/aarch64-linux-gnu/tegra/libnvbuf_utils.so && python3 image_recognition/app.py"
         network_mode: "host"
         environment:
@@ -39,7 +40,8 @@ services:
             TOPIC3: "frictionless/ivlab/start-transaction"
             TOPIC4: "frictionless/ivlab/close-transaction"
             # TOPIC5: "frictionless/ivlab/terminal/start-transaction"
-            CART_TOPIC: "frictionless/edge-cart"
+            GRID_PTS: '["83", "144", "546", "462", "118", "187", "490", "475", "138", "147", "497", "475"]'
+            #CART_TOPIC: "frictionless/edge-cart"
             IMG_CAP_TOPIC: "frictionless/ivlab/capture-image"
             IMG_WS_URL: "ws://ec2-3-218-19-179.compute-1.amazonaws.com/lab/image-ws"
             CART_API: "https://dev.digitkart.ai/api/frictionless/api/kc/updateTransaction"
