--- a/digitkart/dkart-docker-compose.yml
+++ b/digitkart/dkart-docker-compose.yml
@@ -25,7 +25,7 @@ services:
             - "/dev/hidraw0:/dev/hidraw1"
         restart: on-failure
     frictionless_edge:
-        image : index.docker.io/meontechno/frictionless:kc-terminal-qrcv2
+        image : index.docker.io/meontechno/frictionless:kc-terminal-qrcv
         command: bash -c "export LD_PRELOAD=/usr/lib/aarch64-linux-gnu/tegra/libnvbuf_utils.so && python3 image_recognition/app.py"
         network_mode: "host"
         environment:
