--- a/digitkart/download_manager.service
+++ b/digitkart/download_manager.service
@@ -4,6 +4,7 @@ Requires=basic.target network-online.target
 After=basic.target network-online.target
 
 [Service]
+ExecStartPre=/sbin/modprobe uvcvideo
 ExecStart=/home/setup/download_manager.sh
 
 [Install]
