--- a/digitkart/download_manager.service
+++ b/digitkart/download_manager.service
@@ -6,6 +6,7 @@ After=basic.target network-online.target
 [Service]
 ExecStartPre=/sbin/modprobe uvcvideo
 ExecStart=/home/setup/download_manager.sh
+ExecStop=/home/setup/docker-compose down
 
 [Install]
 WantedBy=multi-user.target
